--- a/react-click-game/src/index.css
+++ b/react-click-game/src/index.css
@@ -3,3 +3,36 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.img {
+  width: 100%;
+  height: 230px;
+  transition: all .4s;
+  opacity: 0.9;
+  border: 1px solid #ccc;
+}
+
+.img:hover {
+  opacity: 1;
+  cursor: pointer;
+  box-shadow: 0px 0px 5px #000;
+}
+
+.row div {
+  padding-bottom: 30px;
+}
+
+.answer-true {
+  color: green;
+}
+
+.answer-false {
+  color: red;
+}
+
+@media all and (max-width: 575px) {
+  .img {
+    height: 200px;
+  }
+}
+
